--- a/AboutUs.html
+++ b/AboutUs.html
@@ -49,9 +49,9 @@
       </li> 
         <li class="icon_cart">
           <div style="display: inline-block; position: relative;">
-            <a href="cart.html" class="menu_cart"> 
+            <a href="Cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
-                <div class="cart-cont-num hidden">
+                <div class="cart-cont-num quan_hidden">
                 </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
@@ -67,8 +67,8 @@
   <h1> О нас </h1>
   <div class="container-fluid">	  
 	 <div class="row justify-content-center">      
-      <div class="col-lg-8 p-0 justify-content-center about_text" style="margin-bottom: 30px;"> 
-              <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург. 
+      <div class="col-lg-10 p-0 justify-content-center about_text" style="margin-bottom: 30px;"> 
+              <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург. Закончили университеты, успели поработать в разных сферах, но мысли о собственном проекте, который позволит развиваться и расти вместе с ним, не покидали голову. 
               </p>
       </div>
       <div class="row justify-content-center block_about_picture">
@@ -77,7 +77,7 @@
           </div>
       </div> 
       <div class="col-lg-10 p-0 about_text justify-content-center" >               
-              <p> Нам всегда хотелось какой-нибудь свой небольшой проект. Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родилась эта идея. 
+              <p> Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родился Get Your Book. 
               </p>
               <p> Наша цель - сформировать и поддержать привычку читать книги. Именно поэтому у нас можно оформить подписку сразу на полгода. Вы удивитесь, как много нового можно узнать, читая хотя бы две книги в месяц! Попробуйте! 
               </p>
@@ -148,7 +148,7 @@
               </a>
             </li> 
             <li>
-              <a href="PastMonthsBoxes.html"> 
+              <a href="Boxes.html"> 
                 Коробочки прошлых месяцев 
               </a>
             </li> 
@@ -157,12 +157,12 @@
         <div class="col-6 col-md-4 p-0"> 
           <un>
             <li>
-              <a href="CorporatePresents.html"> 
+              <a href="FAQ.html#corporate"> 
                 Корпоративные подарки 
               </a>
             </li> 
             <li>
-              <a href="Certificate.html"> 
+              <a href="FAQ.html#sertificate"> 
                 Сертификат 
               </a>
             </li> 
