--- a/Boxes.html
+++ b/Boxes.html
@@ -49,9 +49,9 @@
       </li> 
         <li class="icon_cart">
           <div style="display: inline-block; position: relative;">
-            <a href="cart.html" class="menu_cart"> 
+            <a href="Cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
-                <div class="cart-cont-num hidden">
+                <div class="cart-cont-num quan_hidden">
                 </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
@@ -197,7 +197,7 @@
               </a>
             </li> 
             <li>
-              <a href="PastMonthsBoxes.html"> 
+              <a href="Boxes.html"> 
                 Коробочки прошлых месяцев 
               </a>
             </li> 
@@ -206,12 +206,12 @@
         <div class="col-6 col-md-4 p-0"> 
           <un>
             <li>
-              <a href="CorporatePresents.html"> 
+              <a href="FAQ.html#corporate"> 
                 Корпоративные подарки 
               </a>
             </li> 
             <li>
-              <a href="Certificate.html"> 
+              <a href="FAQ.html#sertificate"> 
                 Сертификат 
               </a>
             </li> 
