--- a/Cart.html
+++ b/Cart.html
@@ -23,7 +23,7 @@
 
 
 
-<body id="main_page">
+<body >
   <header>
    <div class="menu"> 
     <img class="logo d-none d-sm-block" src="img/logo.png">
@@ -50,12 +50,12 @@
       </li> 
       <li class="icon_cart">
           <div style="display: inline-block; position: relative;">
-            <a href="cart.html" class="menu_cart active"> 
+            <a href="Cart.html" class="menu_cart active"> 
               <div style="display: inline-block;" > 
-                <div class="cart-cont-num hidden">
+                <div class="cart-cont-num quan_hidden">
                 </div> 
-                <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
-                <img src="img/icon_cart_red.png" class="img_cart_top">
+                <img src="img/icon-cart.png" style="margin-top: -5px; display: none;" class="img_cart_normal"> 
+                <img src="img/icon_cart_red.png" class="img_cart_top show" style="display: inline-block;">
 
                 Корзина
                 
@@ -142,7 +142,7 @@
               </a>
             </li> 
             <li>
-              <a href="PastMonthsBoxes.html"> 
+              <a href="Boxes.html"> 
                 Коробочки прошлых месяцев 
               </a>
             </li> 
@@ -151,12 +151,12 @@
         <div class="col-6 col-md-4 p-0"> 
           <un>
             <li>
-              <a href="CorporatePresents.html"> 
+              <a href="FAQ.html#corporate"> 
                 Корпоративные подарки 
               </a>
             </li> 
             <li>
-              <a href="Certificate.html"> 
+              <a href="FAQ.html#sertificate"> 
                 Сертификат 
               </a>
             </li> 
