--- a/FAQ.html
+++ b/FAQ.html
@@ -49,9 +49,9 @@
       </li> 
         <li class="icon_cart">
           <div style="display: inline-block; position: relative;">
-            <a href="cart.html" class="menu_cart"> 
+            <a href="Cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
-                <div class="cart-cont-num hidden">
+                <div class="cart-cont-num quan_hidden">
                 </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
@@ -80,19 +80,24 @@
       <tr>
         <td>
             <div id="faq_delivery" class="collapse">
-                <p>     1. По Санкт - Петербургу:
+                <p>     1. По Санкт - Петербургу: <br>
 
-            - Самовывоз (метро Черная Речка, пр. Большевиков, Чкаловская) - бесплатно
+            - Самовывоз (метро Черная Речка, пр. Большевиков, Чкаловская) - бесплатно  
+            <br>
             - Курьер в пределах КАД - 150 руб.
+            <br>
             - Курьер по Лен. Области - 200 руб.
-
+            <br>
+            <br>
             2. По России:
-
-            - Транспортные компании СДЭК или Boxberry до пункта выдачи - от 150 руб. до 500 руб. в зависимости от региона (калькулятор доставки посчитает точную стоимость при оформлении заказа). 
+            <br>
+            - Транспортные компании СДЭК или Boxberry до пункта выдачи - от 150 руб. до 500 руб. в зависимости от региона (калькулятор доставки посчитает точную стоимость при оформлении заказа).
+            <br> 
             - Почта России - 250 руб. в любой город
-
+            <br>
+            <br>
             3. Другие страны:
-
+            <br>
             - Почта России от 1000 до 1500 руб., в зависимости от страны (калькулятор доставки посчитает точную стоимость при оформлении заказа).
               </p>
 
@@ -155,7 +160,7 @@
 
 
 
-        <tr data-toggle="collapse" data-target="#faq_payment" class="clickable">
+        <tr data-toggle="collapse" data-target="#faq_payment" class="clickable" id="corporate">
         <td>
           Я могу оплатить коробочку переводом или при получении на почту?
         </td>
@@ -172,7 +177,7 @@
     </tr>
 
 
-        <tr data-toggle="collapse" data-target="#faq_corporate" class="clickable">
+        <tr data-toggle="collapse" data-target="#faq_corporate" class="clickable corporate" id="sertificate" >
         <td>
           Делаете ли вы корпоративные заказы?
         </td>
@@ -189,7 +194,7 @@
     </tr>
 
 
-        <tr data-toggle="collapse" data-target="#faq_sertificate" class="clickable">
+        <tr data-toggle="collapse" data-target="#faq_sertificate" class="clickable sertificate">
         <td>
           Можно купить подарочный сертификат?
         </td>
@@ -245,7 +250,7 @@
               </a>
             </li> 
             <li>
-              <a href="PastMonthsBoxes.html"> 
+              <a href="Boxes.html"> 
                 Коробочки прошлых месяцев 
               </a>
             </li> 
@@ -254,12 +259,12 @@
         <div class="col-6 col-md-4 p-0"> 
           <un>
             <li>
-              <a href="CorporatePresents.html"> 
+              <a href="FAQ.html#corporate"> 
                 Корпоративные подарки 
               </a>
             </li> 
             <li>
-              <a href="Certificate.html"> 
+              <a href="FAQ.html#sertificate"> 
                 Сертификат 
               </a>
             </li> 
