--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </li> 
         <li class="icon_cart">
           <div style="display: inline-block; position: relative;">
-            <a href="cart.html" class="menu_cart"> 
+            <a href="Cart.html" class="menu_cart"> 
               <div style="display: inline-block;" > 
-                <div class="cart-cont-num hidden">
+                <div class="cart-cont-num quan_hidden">
                 </div> 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
@@ -112,7 +112,7 @@
 	   <div class="row block_main" >
 	  	  <div class="col-lg-12 p-0" id="header_main">
           <img src="img/logo.png"> 
-          <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
+          <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками 
           </p>
 	  	  </div>
 	    </div>	 
@@ -478,7 +478,7 @@
         <div class="col-lg-4">
         </div>
 
-        <div class="col-md-8 col-lg-4 offset-lg-7 step_3">
+        <div class="col-md-8 col-lg-3 offset-lg-7 step_3">
          
           <div class="steps_image">
               <img src="img/step_3.png" style="margin-left: -50px;">
@@ -614,7 +614,7 @@
               </a>
             </li> 
             <li>
-              <a href="PastMonthsBoxes.html"> 
+              <a href="Boxes.html"> 
                 Коробочки прошлых месяцев 
               </a>
             </li> 
@@ -623,12 +623,12 @@
         <div class="col-6 col-md-4 p-0"> 
           <un>
             <li>
-              <a href="CorporatePresents.html"> 
+              <a href="FAQ.html#corporate"> 
                 Корпоративные подарки 
               </a>
             </li> 
             <li>
-              <a href="Certificate.html"> 
+              <a href="FAQ.html#sertificate"> 
                 Сертификат 
               </a>
             </li> 
