FAQ Footer Update

--- a/FAQ.html
+++ b/FAQ.html
@@ -216,6 +216,8 @@
 
 </div>
 
+<!-- closing container fluid -->
+</div>
   <footer class="footer ">
     <div class="container-fluid">
       <h2 id="contacts"> Напишите нам! </h2>
