--- a/Cart.html
+++ b/Cart.html
@@ -102,7 +102,7 @@
   <div class="col-md-3 offset-md-7 total_price_box">
     <p> Итого: </p> <p class="total_price"> </p>
     <div class="button_main" style="text-align: center; margin-top: 30px; "> 
-              <a href="" id=""> 
+              <a href="" id="" data-toggle="modal" data-target="#modal_order"> 
                 Оформить заказ 
               </a>
             </div>
@@ -171,6 +171,28 @@
 
 
 
+<!-- Modals -->
+
+<div class="modal fade" id="modal_order">
+  <div class="modal-dialog modal-dialog-centered" > 
+    <div class="modal-content">  
+        <div >
+          <button type="button" class="close" data-dismiss="modal"  style="margin: 20px 20px 0 0;">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">            
+            <div class="row justify-content-center">
+              <div class="col-md-6 p-0">
+                <p>Спасибо за заказ! Ваша коробочка отправится к вам 28-го числа</p>
+              </div>
+             </div>  
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>  
+            
 
 
 
