--- a/AboutUs.html
+++ b/AboutUs.html
@@ -63,11 +63,12 @@
       </un> 
    </div>
   </header>
+<div class="container-fluid"> 
 
   <h1> О нас </h1>
-  <div class="container-fluid">	  
+    
 	 <div class="row justify-content-center">      
-      <div class="col-lg-10 p-0 justify-content-center about_text" style="margin-bottom: 30px;"> 
+      <div class="col-lg-10 p-0 justify-content-center " style="margin-bottom: 30px;"> 
               <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург. Закончили университеты, успели поработать в разных сферах, но мысли о собственном проекте, который позволит развиваться и расти вместе с ним, не покидали голову. 
               </p>
       </div>
