--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
             </div>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="PrivacyCheck">
-              <label class="form-check-label" for="PrivacyCheck">
-                Согласие с политикой конфиденциальности
+              <label class="form-check-label" for="PrivacyCheck"> <a href="Policy.html">
+                Согласие с политикой конфиденциальности </a>
               </label>
             </div>
           
