--- a/Cart.html
+++ b/Cart.html
@@ -174,7 +174,7 @@
 <!-- Modals -->
 
 <div class="modal fade" id="modal_order">
-  <div class="modal-dialog modal-dialog-centered" > 
+  <div class="modal-dialog modal-dialog-centered modal-big" > 
     <div class="modal-content">  
         <div >
           <button type="button" class="close" data-dismiss="modal"  style="margin: 20px 20px 0 0;">&times;</button>
