--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
 
 
 <div class="modal fade" id="modal_code">
-  <div class="modal-dialog modal-dialog-centered" > 
+  <div class="modal-dialog modal-dialog-centered modal-big" > 
     <div class="modal-content">  
         <div >
           <button type="button" class="close" data-dismiss="modal" style="margin: 20px 20px 0 0;">&times;</button>
